# hotdata-cli

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  codecov.yml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-integration.yml  integration-tests.yml  publish-homebrew.yml  release.yml
docs/: RELEASING.md
scripts/: release.sh  test_commands.sh  validate-changelog.py
skills/hotdata/: SKILL.md
skills/hotdata-analytics/: SKILL.md
skills/hotdata-analytics/references/: WORKFLOWS.md
skills/hotdata-cli/: SKILL.md
skills/hotdata-cli/references/: DATA_MODEL.template.md  WORKFLOWS.md
skills/hotdata-geospatial/: SKILL.md
skills/hotdata-geospatial/references/: functions.md
skills/hotdata-search/: SKILL.md
skills/hotdata-search/references/: INDEXES.md
skills/hotdata/references/: DATA_MODEL.template.md  MODEL_BUILD.md  WORKFLOWS.md
src/: api.rs  auth.rs  cli.rs  client.rs  command.rs  commands.rs  config.rs  connections.rs  connections_new.rs  context.rs  database_session.rs  databases.rs  datasets.rs  embedding.rs  embedding_providers.rs  indexes.rs  init.rs  jobs.rs  jwt.rs  main.rs  markdown.rs  output.rs  queries.rs  query.rs  raw_http.rs  results.rs  sandbox.rs  sandbox_session.rs  sdk.rs  sessions.rs  skill.rs  table.rs  tables.rs  update.rs  usage.rs  util.rs  views.rs  workspace.rs
src/client/: credentials.rs  database_session.rs  ingest.rs  jwt.rs  raw_http.rs  sdk.rs
src/commands/: auth.rs  connections.rs  context.rs  databases.rs  embedding_providers.rs  indexes.rs  ingest.rs  jobs.rs  prompt.rs  queries.rs  query.rs  results.rs  skill.rs  tables.rs  update.rs  usage.rs  workspace.rs
src/commands/connections/: interactive.rs
src/output/: table.rs
tests/: auth_missing_token_401.rs  auth_no_subcommand_help.rs  auth_unknown_workspace.rs  connections_read.rs  databases_cli.rs  query_async_polling.rs  results_arrow.rs  sandbox_env.rs  session_env.rs  workspace_env.rs  workspaces_list.rs
tests/common/: mod.rs
