[package]
name = "hotdata-cli"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/hotdata-dev/hotdata-cli"
description = "CLI tool for Hotdata.dev"
homepage = "https://www.hotdata.dev"
publish = false

[[bin]]
name = "hotdata"
path = "src/main.rs"

[dependencies]
# Hotdata Rust SDK. The CLI's sync wrapper (src/sdk.rs) drives this async SDK
# behind a shared multi-thread tokio runtime. Pinned to the enhancement rev
# that adds TokenManagerOptions (CLI attribution). Uses a local git checkout
# because the enhancement rev is not yet pushed; swap the `git` URL to the
# GitHub remote in the final chore(deps) commit once the rev lands upstream.
hotdata = { git = "file:///Users/zacfarrell/Projects/hotdata/sdk-rust", rev = "fed2cb0a03c91abda17814b3fecdc7b1f910eefa", features = ["arrow"] }
# Shared multi-thread runtime for the sync wrapper; block_on is called
# concurrently from rayon worker threads (see src/indexes.rs).
tokio = { version = "1", features = ["rt-multi-thread"] }
# CliTokenProvider implements the SDK's #[async_trait] BearerTokenProvider.
async-trait = "0.1"
anstyle = "1.0.13"
clap = { version = "4", features = ["derive"] }
directories = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "54", default-features = false, features = ["ipc"] }
serde_yaml = "0.9"
base64 = "0.22"
crossterm = "0.28"
dotenvy = "0.15"
open = "5"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
tabled = { version = "0.20", features = ["ansi"] }
clap_complete = "4"
inquire = "0.9.4"
indicatif = "0.17"
nix = { version = "0.29", features = ["fs"] }
flate2 = "1"
tar = "0.4"
semver = "1"
sqlformat = "0.5.0"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
lzma-rs = "0.3"
tempfile = "3"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1"

[build-dependencies]
toml = "0.8"

# Project distribution config read by build.rs and exposed as compile-time
# env vars (HOTDATA_HOMEBREW_FORMULA, ...) so source files don't hardcode
# values that also live in the README / dist-workspace.toml.
[package.metadata.hotdata]
# Fully-qualified Homebrew install target. Matches the `brew install` line
# in README.md; the trailing segment must match `formula` in dist-workspace.toml.
homebrew_formula = "hotdata-dev/tap/cli"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "v{{version}}" ]
publish = false
pre-release-replacements = [
  { file = "skills/hotdata/SKILL.md", search = "^version: .+", replace = "version: {{version}}", exactly = 1 },
  { file = "skills/hotdata-search/SKILL.md", search = "^version: .+", replace = "version: {{version}}", exactly = 1 },
  { file = "skills/hotdata-analytics/SKILL.md", search = "^version: .+", replace = "version: {{version}}", exactly = 1 },
  { file = "skills/hotdata-geospatial/SKILL.md", search = "^version: .+", replace = "version: {{version}}", exactly = 1 },
  { file = "README.md", search = "version-[0-9.]+-blue", replace = "version-{{version}}-blue", exactly = 1 },
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
